# docs/swagger.json
@@ -175,13 +175,57 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Канал і повідомлення",
+                    "400": {
+                        "description": "Помилка валідації або бізнес-логіки",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
+                    "401": {
+                        "description": "Неавторизований доступ",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/chat/rooms": {
+            "post": {
+                "security": [
+                    {
+                        "UserTokenAuth": []
+                    }
+                ],
+                "description": "Створення кімнати для спілкування",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Створення кімнати",
+                "parameters": [
+                    {
+                        "description": "Дані для створення",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateRoomRequest"
+                        }
+                    }
+                ],
+                "responses": {
                     "400": {
                         "description": "Помилка валідації або бізнес-логіки",
                         "schema": {
@@ -205,6 +249,30 @@
         }
     },
     "definitions": {
+        "models.CreateRoomRequest": {
+            "type": "object",
+            "required": [
+                "members",
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
+                }
+            }
+        },
         "models.LoginRequest": {
             "type": "object",
             "required": [
